# backend/src/routes/index.js
@@ -2,6 +2,7 @@ import { Router } from 'express';
 import userRoutes from './userRoutes.js';
 import authRoutes from './authRoutes.js';
 import institutionRoutes from './institutionRoutes.js';
+import certificateRoutes from './certificateRoutes.js';
 
 const router = Router();
 
@@ -19,5 +20,8 @@ router.use('/auth', authRoutes);
 // Importa as rotas de instituições
 // (por exemplo, criação, atualização, listagem)
 router.use('/institutions', institutionRoutes);
+// Importa as rotas de certificados
+// (por exemplo, listagem, criação, atualização)
+router.use('/certificates', certificateRoutes);
 
 export default router;
